see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

28-Dec-2010 Jean-Marie Simonet
 # [#23983] Admin username and password being saved as FTP credentials if you aren't careful. Thanks Elin.
 $ [#24011] No_Images_Found Text String Missing. Thanks Bill.
 $ Adding a framework string necessary when no non en-GB site/admin langague pack installed
 # [#24015] Web services configuration option still there. Thanks Sam and Rouven.
 $ Missing lang strings
 # [#23938] Fix a couple of issues related to path configuration. Thanks Rouven.
 $ Modifying some language strings in installation ini file.
 
27-Dec-2010 Jean-Marie Simonet
 # [#23942] Accessibility fix for sliders. Thanks Andrea.
 $# [#23997] Refactoring language strings for permissions tooltips and Note. + reordering some inis.
 # [#23998] Incorrect description for permissions configure options. Thanks Bill.
 $ Correcting inconsistent keys and reordering com_users.ini

26-Dec-2010 Jean-Marie Simonet
 # [#23977] Weblink: modal and popup target window patch
 #$ [#23988] Updating/installing Joomla core through Manager does not display XML description
 # [#23990] mod_articles_category some header tag's are not closed properly. Thanks Bill.
 # [#23944] Accessibility fix for Toolbar. Thanks Andrea
 # [#23943] Accessibility fix for Modals. Thanks Andrea

25-Dec-2010 Jean-Marie Simonet
 # [#23970] language string missing COM_BANNERS_FIELD_VALUE_0. Thanks Bill.
 $ [#23927] Bad Translation
 
25-Dec-2010 Mark Dexter
 # [#23886] Escape Module Class Suffix for all Modules (Rouven Weßling)
 # [#23773] Category not found notice
 # [#23967] Parameter $default is useless in JRegistry::exists