@@ -155,7 +155,9 @@ class JInstallation extends JApplication
 
 		// Load Library language
 		$lang = JFactory::getLanguage();
-		$lang->load('lib_joomla', JPATH_ADMINISTRATOR);
+		$lang->load('lib_joomla', JPATH_SITE)
+		|| $lang->load('lib_joomla', JPATH_ADMINISTRATOR);
+
 	}
 
 	/**
