@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+29-Dec-2010 Jean-Marie Simonet
+ # [#24027] Allowing site only language packs to load xx-XX.lib_joomla.ini file
+
 28-Dec-2010 Jean-Marie Simonet
  # [#23983] Admin username and password being saved as FTP credentials if you aren't careful. Thanks Elin.
  $ [#24011] No_Images_Found Text String Missing. Thanks Bill.
